# totodev-pub

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: dependency-install-matrix.yml  tests.yml
docs/: dependency-strategy.md  folder-backed-case-folder-logging-design.md  folder-backed-case-refactoring-proposal.md  zoho-workdrive-connectivity.md
notebooks/DEVDAVE/: case_queue_design.md
src/totodev_pub/: .gitignore  __init__.py  app_config_root_class.py  cached_file_folders.py  date_folders.py  dbjig.py  file_mapped_pydantic_mixin.py  folder_backed_case.py  (+7 more)
tests/: case_test_utils.py  conftest.py  readme.totodevtests.md  test_aliased_asset_specs.py  test_app_config_cached_subset.py  test_app_config_root_class.py  test_asset_dataclass_registry.py  test_asset_schema.py  test_asset_state_validity.py  test_cache_grouping.py  test_cache_grouping_file_proxy.py  test_cached_file_folders_manifest.py  test_cached_file_folders_mock_network.py  test_cached_file_folders_relative_paths.py  test_cached_file_folders_samefile_error.py  test_cached_file_folders_slave_dir.py  test_cached_folders_versioner.py  test_case_assets.py  test_case_folder_logging.py  test_case_journal.py  test_case_machine_factory.py  test_case_record_asset_aliases.py  test_change_notice.py  test_coding_standards_and_policy.py  test_date_folder_pather.py  test_date_folders.py  test_date_tree_folder_class_methods.py  test_date_tree_folder_extended.py  test_db_migration_file_reader.py  test_db_migration_sql_dialects.py  test_dbjig.py  test_email_folder_synchronizer.py  test_file_mapped_pydantic_mixin.py  test_file_proxy_dummy.py  test_file_proxy_local_file_factory.py  test_file_proxy_mock_network.py  test_file_proxy_outlook_email.py  test_file_proxy_refactoring.py  test_file_proxy_sharepoint.py  test_flexargs.py  (+34 more)
(+207 files in other folders)
